// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`method-signature.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type Foo = {
  get(key: "foo"): \`
  \`;
};
type Foo = {
  get(key: "foo"): \`\`;
};

type Bar = {
  get(key: "bar"): {
    bar: "bar"
  };
}
type Bar = {
  get(key: "bar"): { bar: "bar" };
}

=====================================output=====================================
type Foo = {
  get(key: "foo"): \`
  \`;
};
type Foo = {
  get(key: "foo"): \`\`;
};

type Bar = {
  get(key: "bar"): {
    bar: "bar";
  };
};
type Bar = {
  get(key: "bar"): { bar: "bar" };
};

================================================================================
`;

exports[`semi.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
declare module 'foo' {
  function foo(namespace: string): void;
  function bar(namespace: string): void;
}

function pickCard(x: {suit: string; card: number; }[]): number;
function pickCard(x: number): {suit: string; card: number; };

=====================================output=====================================
declare module "foo" {
  function foo(namespace: string): void;
  function bar(namespace: string): void;
}

function pickCard(x: { suit: string; card: number }[]): number;
function pickCard(x: number): { suit: string; card: number };

================================================================================
`;

exports[`type_literal_optional_method.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
var v: { e?(): number };

=====================================output=====================================
var v: { e?(): number };

================================================================================
`;
